[gd_scene load_steps=18 format=3 uid="uid://cv3xx2ipw07nm"]

[ext_resource type="Script" path="res://assets/scripts/Tube.gd" id="1_fupd6"]
[ext_resource type="Shader" path="res://assets/shaders/LinearGradientLighting.gdshader" id="2_fr1g7"]
[ext_resource type="Texture2D" uid="uid://b7gvwpxu3u2md" path="res://assets/sprites/Tubes.png" id="3_pkb4n"]
[ext_resource type="Script" path="res://assets/scripts/Breakable.gd" id="4_6eh6v"]
[ext_resource type="PackedScene" uid="uid://wu7o1nb6dsiv" path="res://assets/nodes/grid_objects/components/Placeable.tscn" id="4_27a7h"]
[ext_resource type="PackedScene" uid="uid://j78jrdji3ixh" path="res://assets/effects/BreakEffect.tscn" id="5_2i257"]
[ext_resource type="PackedScene" uid="uid://dbxj2jfpnkfn7" path="res://assets/nodes/grid_objects/components/MachinePart.tscn" id="5_suk64"]
[ext_resource type="PackedScene" uid="uid://d1tjgp7s4sfpa" path="res://assets/nodes/grid_objects/components/Suction.tscn" id="6_xhbxm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2h4s7"]
resource_local_to_scene = true
shader = ExtResource("2_fr1g7")
shader_parameter/unshaded_color = Vector4(0.09, 0.09, 0.09, 1)
shader_parameter/highlight_color = Vector3(0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6h08g"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gtwi"]
size = Vector2(16, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bq6y7"]
size = Vector2(2, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3d6q"]
size = Vector2(20, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sgf4"]
size = Vector2(20, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cs72"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o81lq"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtwwo"]
size = Vector2(2, 20)

[node name="Tube" type="Node2D"]
script = ExtResource("1_fupd6")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
material = SubResource("ShaderMaterial_2h4s7")
texture = ExtResource("3_pkb4n")
region_enabled = true
region_rect = Rect2(40, 0, 20, 20)

[node name="Breakable" type="Node2D" parent="."]
script = ExtResource("4_6eh6v")
break_effect_pack = ExtResource("5_2i257")

[node name="Placeable" parent="." instance=ExtResource("4_27a7h")]

[node name="MachinePart" parent="." instance=ExtResource("5_suk64")]

[node name="Suction" parent="." instance=ExtResource("6_xhbxm")]

[node name="StaticBody2DCorner" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2DCorner"]
position = Vector2(7, 7)
shape = SubResource("RectangleShape2D_6h08g")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2DCorner"]
position = Vector2(1, -6)
shape = SubResource("RectangleShape2D_8gtwi")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2DCorner"]
position = Vector2(-6, 2)
shape = SubResource("RectangleShape2D_bq6y7")

[node name="StaticBody2DStraight" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2DStraight"]
position = Vector2(0, 5.976)
shape = SubResource("RectangleShape2D_w3d6q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2DStraight"]
position = Vector2(0, -5.976)
shape = SubResource("RectangleShape2D_5sgf4")

[node name="StaticBody2DTJunction" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2DTJunction"]
position = Vector2(7, 7)
shape = SubResource("RectangleShape2D_5cs72")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2DTJunction"]
position = Vector2(7, -7)
shape = SubResource("RectangleShape2D_o81lq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2DTJunction"]
position = Vector2(-6, 0)
shape = SubResource("RectangleShape2D_gtwwo")

[node name="StaticBody2DIntersection" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2DIntersection"]
position = Vector2(7, 7)
shape = SubResource("RectangleShape2D_5cs72")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2DIntersection"]
position = Vector2(7, -7)
shape = SubResource("RectangleShape2D_o81lq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2DIntersection"]
position = Vector2(-7, 7)
shape = SubResource("RectangleShape2D_5cs72")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2DIntersection"]
position = Vector2(-7, -7)
shape = SubResource("RectangleShape2D_o81lq")
